* Added new display style "graphical" that will pop open a GUI window
  containing query results in a sortable graphical table.
* Added $window_size to control the size of the window in graphical
  display mode and $font to set the font that will be used.
* All jsqsh command now take an option -g that can cause them to display
  to a popup graphical window. See "\help options" for details
* Added \insert command, this displays the results of the current SQL
  query as INSERT statements or executes the INSERT statements in 
  another session.
* Added \select command to generate select statements and joins from
  table definitions.
* Added \create command to generate CREATE TABLE statement from a table
  definition.
* Added \diff command to compare results from SQL executed across 
  multiple session.
* The \help command is now more organized.
* JSqsh is now better at determining if the session is interactive
  or non-interactive (i.e. if stdin has been redirected).
* Tab completion now recognizes the TSQL "use" statement.
* Display of "info" type SQLWarning's (e.g. the output from a "print"
  statement from Sybase and Microsoft) is improved.
* Fixed bug in PL/SQL parser that cause jsqsh to sit in tight loop
  eating CPU when parsing certain PL/SQL blocks.
* Fixed bug with way getUpdateCount() is being called that was causing
  Sybase's jConnect driver to complain.
* Updated driver definition to use the jConnect 6.x driver for Sybase
  
Release 1.0
* Tab completion now recognizes stored procedure execution requests and
  will attempt to complete parameter names and procedure names.
* Added '-i' flag to GO to allow you to generate INSERT statements from a 
  result set.
* Added support for CLOB and BLOB datatypes (bug #1820183). Current support
  requires holding the entire object in memory so be careful!
* Added $show_meta variable to display JDBC result set metadata as a separate
  result set when executing queries.