@@ -273,7 +273,32 @@ SEE ALSO
         ]]></Help>
 	</Property>
 	
+	<Property bean="global" name="nocount" property="SQLRenderer.noCount">
+		<Description>Controls display of "rows affected" from update/deletes</Description>
+        <Help><![CDATA[
+VARIABLE
+   nocount - Controls the display of "rows affected" due to updates and deletes
 
+DESCRIPTION
+   The ${nocount} variable can be used to suppress the output of:
+   
+      (XXX rows affected)
+      
+   that are generated by INSERT, UPDATE, and DELETE statements (that is,
+   statements that do not generate row results). 
+   
+   Note that some platforms allow these sorts of counts to be disabled at
+   the server (e.g. Sybase's and Microsoft's "set nocount on" option). 
+   This variable does NOT turn the setting off at the server, but simply
+   hides the messages from display.
+   
+   The default value is "false", indicating that these results should be
+   displayed.
+   
+SEE ALSO
+   \go
+        ]]></Help>
+	</Property>
 	
 	<Property bean="global" name="maxrows" property="SQLRenderer.maxRows">
 		<Description>Limits the size of query results</Description>
